--- a/Headwork2/src/assets/tasks.json
+++ b/Headwork2/src/assets/tasks.json
@@ -1,13 +1,9 @@
 [
 	{
 		"idTask":"1",
-		"title":"Identify the bee",
-		"description":"We need to identify the exact type of this bee",
-		"question":"De quel type d'abeille s'agit-il ?",
-		"typeDeQuestion":1,
-		"image":"http://www.apiculteur.ch/images/libre_droit/abeille_fleur_bourrache.jpg",
-		"competences":["botanique"],
-		"typeDeReponses":0,
+		"label":"Identify the bee",
+		"description":null,
+		"category":"botanique",
 		"taskDifficulty":5,
 		"taskDuration":30
 	},
@@ -15,7 +11,7 @@
 		"idTask":"2",
 		"label":"Code language",
 		"description":"find the programmation language of the given code",
-		"competences":"programmation",
+		"category":"programmation",
 		"taskDifficulty":3,
 		"taskDuration":10
 	},
@@ -23,7 +19,7 @@
 		"idTask":"3",
 		"label":"Easy task",
 		"description":"an easy task to accomplish",
-		"competences":"texte",
+		"category":"texte",
 		"taskDifficulty":1,
 		"taskDuration":20
 	},
@@ -31,7 +27,7 @@
 		"idTask":"4",
 		"label":"Analyse PDF",
 		"description":"find the specified elements inside a PDF file",
-		"competences":"texte",
+		"category":"texte",
 		"taskDifficulty":2,
 		"taskDuration":15
 	},
@@ -39,7 +35,7 @@
 		"idTask":"5",
 		"label":"Text trasncription",
 		"description":"write a text that have been handwritten",
-		"competences":"texte",
+		"category":"texte",
 		"taskDifficulty":4,
 		"taskDuration":5
 	}
